Fix spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -39,8 +39,7 @@ body {
 }
 
 .text-container {
-  padding: 0 2em;
-  margin: 1.5em 0 2.5em 0;
+  margin: 1.5em;
 }
 
 .title {
